Incluindo imagem e lista

--- a/index.html
+++ b/index.html
@@ -9,13 +9,20 @@
 
 <body>
 
-    <header> <h1 class="titulo-principal">Pensamento Computacional </h1>
-        
-    </header>
+    <header>
+        <h1 class="titulo-principal">Pensamento Computacional </h1>
 
-    <center>
-        <img id=imagem src="pc2022.png">
-    </center>
+        <center>
+            <img id=imagem src="pc2022.png">
+        </center>
+        <ul>
+            <li> Página Inicial </li>
+            <li> Fotos </li>
+            <li> Projetos </li>
+            <li> Histórico </li>
+
+        </ul>
+    </header>
     <h1>Pensamento Computacional - Colégio C.M. "Prof. José Alexandre Chiarelli" </title>
     </h1>
 
@@ -43,12 +50,12 @@
                 <li>Algoritmo</li>
 
             </ul>
-            <img class="itens" src="pilares.jpg"> 
+            <img class="itens" src="pilares.jpg">
     </div>
 </body>
 
 <footer>
-    <h3 class="rodape">Desenvolvido por Rogério Naves dos Reis  </h3>
+    <h3 class="rodape">Desenvolvido por Rogério Naves dos Reis </h3>
 </footer>
 
 </html>
