--- a/paginainicial.html
+++ b/paginainicial.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title> Pensamento Computacional</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="paginainicial.css">
 </head>
 
 <body>
