--- a/paginainicial.html
+++ b/paginainicial.html
@@ -16,9 +16,9 @@
             <img id=imagem src="pc2022.png">
         </center>
         <ul>
-            <li> Página Inicial </li>
-            <li> Fotos </li>
-            <li> Projetos </li>
+            <li> <a href="index.html"> </a> Página Inicial </li>
+            <li> <a href="paginaprincipal"> </a> Fotos </li>
+            <li> <a href="projetos"> </a> Projetos </li>
             <li> Histórico </li>
 
         </ul>
