Linkando pagina inicial

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <title> Pensamento Computacional</title>
     <link rel="stylesheet" href="style.css">
+    
 </head>
 
 <body>
@@ -16,8 +17,7 @@
             <img id=imagem src="pc2022.png">
         </center>
         <ul>
-            <li> Página Inicial </li>
-            <li> Fotos </li>
+            <li> <a href="paginaprincipal"> </a> Fotos </li>
             <li> Projetos </li>
             <li> Histórico </li>
 
