--- a/paginainicial.html
+++ b/paginainicial.html
@@ -17,8 +17,7 @@
         </center>
         <ul>
             <li> <a href="index.html"> </a> Página Inicial </li>
-            <li> <a href="paginaprincipal"> </a> Fotos </li>
-            <li> <a href="projetos"> </a> Projetos </li>
+            <li> Projetos </li>
             <li> Histórico </li>
 
         </ul>
