salvando alterações ancoragem

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <img id=imagem src="pc2022.png">
         </center>
         <ul>
-            <li> <a href="paginaprincipal"> </a> Fotos </li>
+            <li> <a href="paginainicial.html"> </a> Fotos </li>
             <li> Projetos </li>
             <li> Histórico </li>
 
