--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <title> Pensamento Computacional</title>
     <link rel="stylesheet" href="style.css">
-    
+
 </head>
 
 <body>
@@ -16,12 +16,15 @@
         <center>
             <img id=imagem src="pc2022.png">
         </center>
-        <ul>
-            <li> <a href="paginainicial.html"> </a> Fotos </li>
-            <li> Projetos </li>
-            <li> Histórico </li>
+        <nav>
+            <ul>
+                <li> <a href="paginainicial.html"> </a> Fotos </li>
+                <li> Projetos </li>
+                <li> Histórico </li>
 
-        </ul>
+            </ul>
+
+        </nav>
     </header>
     <h1>Pensamento Computacional - Colégio C.M. "Prof. José Alexandre Chiarelli" </title>
     </h1>
