--- a/paginainicial.html
+++ b/paginainicial.html
@@ -15,12 +15,14 @@
         <center>
             <img id=imagem src="pc2022.png">
         </center>
-        <ul>
-            <li> <a href="index.html"> </a> Página Inicial </li>
-            <li> Projetos </li>
-            <li> Histórico </li>
+        <nav>
+            <ul>
+                <li> <a href="index.html"> </a> Página Inicial </li>
+                <li> Projetos </li>
+                <li> Histórico </li>
 
-        </ul>
+            </ul>
+        </nav>
     </header>
     <h1>Pensamento Computacional - Colégio C.M. "Prof. José Alexandre Chiarelli" </title>
     </h1>
