--- a/paginainicial.html
+++ b/paginainicial.html
@@ -17,11 +17,13 @@
         </center>
         <nav>
             <ul>
-                <li> <a href="index.html"> </a> Página Inicial </li>
+                <li> <a href="index.html"> </a> Voltar </li>
+                <li> Fotos </li>
                 <li> Projetos </li>
                 <li> Histórico </li>
 
             </ul>
+
         </nav>
     </header>
     <h1>Pensamento Computacional - Colégio C.M. "Prof. José Alexandre Chiarelli" </title>
