--- a/paginainicial.html
+++ b/paginainicial.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title> Pensamento Computacional</title>
+    <title> Fotos </title>
     <link rel="stylesheet" href="paginainicial.css">
 </head>
 
@@ -17,7 +17,7 @@
         </center>
         <nav>
             <ul>
-                <li><a href="index.html"></a>Voltar</li>
+                <li><a href="index.html">Voltar</a></li>
                 <li>Fotos</li>
                 <li>Projetos</li>
                 <li>Histórico</li>
