--- a/index.html
+++ b/index.html
@@ -54,7 +54,10 @@
                 <li>Algoritmo</li>
 
             </ul>
+            <div>
             <img class="itens" src="pilares.jpg">
+
+            </div>
     </div>
 </body>
 
