Testando a tag position

--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
         <center>
             <img id=imagem src="pc2022.png">
         </center>
-        <nav>
+        <div class="menu">
+            <nav>
             <ul>
                 <li><a href="paginainicial.html">Fotos</a></li>
                 <li>Projetos</li>
@@ -26,6 +27,7 @@
             </ul>
 
         </nav>
+        </div>
     </header>
     <h1>Pensamento Computacional - Colégio C.M. "Prof. José Alexandre Chiarelli" </title>
     </h1>
